# speaker-type-classifier

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  template.py  trial_0000_summary.json  trial_0001_summary.json  trial_0002_summary.json  trial_0003_summary.json  trial_0004_summary.json  trial_0005_summary.json  trial_0006_summary.json  trial_0007_summary.json  trial_0008_summary.json  trial_0009_summary.json  trial_0010_summary.json  trial_0011_summary.json  trial_0012_summary.json  trial_0013_summary.json  trial_0014_summary.json  trial_0015_summary.json  trial_0016_summary.json  trial_0017_summary.json  trial_0018_summary.json  trial_0019_summary.json  trial_0020_summary.json  trial_0021_summary.json  trial_0022_summary.json  trial_0023_summary.json  trial_0024_summary.json  trial_0025_summary.json  trial_0026_summary.json  trial_0027_summary.json  trial_0028_summary.json  trial_0029_summary.json  trial_0030_summary.json  trial_0031_summary.json  trial_0032_summary.json  trial_0033_summary.json  (+6 more)
configs/: config.yaml  params.yaml  schema.yaml
notebooks/: 00_data_research.ipynb  02_feature_exploration.ipynb  03_EXP01_xgboost_FeatureSet_selection.ipynb  04_EXP02_xgb_egemaps_hyperparameter_tuning_mlflow.ipynb
scripts/: run_all.sh  run_stage_01.sh  run_stage_02.sh  run_stage_03.sh  run_stage_04.sh
src/speaker_type_classifier/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/speaker_type_classifier/config/: configuration.py
src/speaker_type_classifier/constant/: constants.py
src/speaker_type_classifier/entity/: artifact_entity.py  config_entity.py
src/speaker_type_classifier/exception/: exception.py
src/speaker_type_classifier/logging/: logger.py
src/speaker_type_classifier/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py
src/speaker_type_classifier/utils/: audio_utils.py  common.py  hf_utils.py  io_utils.py  ml_utils.py  run_utils.py  validation_utils.py
(+21 files in other folders)
