[project]
name = "speaker-type-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "audioread>=3.1.0",
    "datasets>=4.5.0",
    "huggingface-hub>=1.3.7",
    "joblib>=1.5.3",
    "librosa>=0.11.0",
    "logging>=0.4.9.6",
    "numpy>=2.2.6",
    "opensmile>=2.6.0",
    "pandas>=2.3.3",
    "protobuf>=6.33.5",
    "pyarrow>=23.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "tqdm>=4.67.2",
    "transformers>=5.0.0",
    "webdataset>=1.0.2",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "ruff>=0.14.14",
    "seaborn>=0.13.2",
]
