[project]
name = "speaker-type-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "audioread>=3.1.0",
    "datasets>=4.5.0",
    "huggingface-hub>=1.3.7",
    "joblib>=1.5.3",
    "librosa>=0.11.0",
    "numba>=0.57,<0.62",
    "numpy>=1.24,<2.0",
    "opensmile>=2.6.0",
    "pandas>=2.3.3",
    "protobuf>=3.20.3,<5",
    "pyarrow>=23.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "tqdm>=4.67.2",
    "transformers>=5.0.0",
    "webdataset>=1.0.2",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = [
    "black>=24.0",
    "dagshub>=0.6.5",
    "ipykernel>=6.29",
    "isort>=5.13",
    "jupyter>=1.1.1",
    "matplotlib>=3.8",
    "mlflow<2.17.0",
    "pytest>=8",
    "pytest-cov>=5",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "ruff>=0.4",
    "seaborn>=0.13.2",
]
